[tool.poetry]
name = "combineaudio"
version = "0.1.0"
description = ""
authors = ["Ryan <ryanjalbertson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydub = "^0.25.1"
gTTS = "^2.3.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
